--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react-dom": "^18.2.5",
     "antd": "^5.6.2",
     "axios": "^1.4.0",
+    "firebase": "^10.1.0",
     "formik": "^2.4.2",
     "formik-antd": "^2.0.4",
     "jwt-decode": "^3.1.2",
