--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "firebase": "^10.1.0",
     "formik": "^2.4.2",
     "formik-antd": "^2.0.4",
+    "gh-pages": "^5.0.0",
     "jwt-decode": "^3.1.2",
     "moment": "^2.29.4",
     "react": "^18.2.0",
@@ -34,7 +35,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
